[2025-09-24] DZ모델 패턴 추가 및 파일 생성(버전 1.8로 변경)